--- a/LogReg_Titanic.ipynb
+++ b/LogReg_Titanic.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "LogReg Titanic.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOmW+sglWuZFovFUiHI5ooB",
+      "provenance": [],
+      "authorship_tag": "ABX9TyNRjpsA+tf10ordEOx2sJuE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +28,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aOU9Qu3jLz81",
-        "colab_type": "code",
-        "colab": {}
+        "id": "aOU9Qu3jLz81"
       },
       "source": [
         "# Clone the entire repo.\n",
         "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
-        "%cd cloned-repo\n",
-        "!ls"
+        "%cd cloned-repo"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6bUBz81Xb1DD"
+      },
+      "source": [
+        "**Import libraries**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8bbxnl5XJ9E6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8bbxnl5XJ9E6"
       },
       "source": [
         "# pandas\n",
@@ -65,15 +69,22 @@
         "# machine learning\n",
         "from sklearn.linear_model import LogisticRegression"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MxaeZB9Rb5Kr"
+      },
+      "source": [
+        "**Load the Titanic dataset**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1Hrn8ibSLvEO",
-        "colab_type": "code",
-        "colab": {}
+        "id": "1Hrn8ibSLvEO"
       },
       "source": [
         "titanic_df = pd.read_csv(\"train.csv\")\n",
@@ -82,56 +93,67 @@
         "# preview the data\n",
         "titanic_df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cmEY2aX3cAoW"
+      },
+      "source": [
+        "**Look at the data**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3Wkya8HFMduo",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3Wkya8HFMduo"
       },
       "source": [
         "test_df"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uJBUIX6RI3HD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "uJBUIX6RI3HD"
       },
       "source": [
         "titanic_df.info()\n",
         "print(\"----------------------------\\n\\n\")\n",
         "test_df.info()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jlzXB16sVurh",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jlzXB16sVurh"
       },
       "source": [
         "titanic_df.columns"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7qfMdQC6cHWZ"
+      },
+      "source": [
+        "**Plot the data**<br>\n",
+        "Show age, sex, and who survived"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zgrErYS3VP7O",
-        "colab_type": "code",
-        "colab": {}
+        "id": "zgrErYS3VP7O"
       },
       "source": [
         "import seaborn as sns\n",
@@ -141,30 +163,44 @@
         "            sizes=(40, 400), alpha=.5, palette=\"bright\",\n",
         "            height=6, data=titanic_df)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WkjEvu1McR4T"
+      },
+      "source": [
+        "**Drop columns that may not have an impact on survival rates**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lmEHNjVqI6Zd",
-        "colab_type": "code",
-        "colab": {}
+        "id": "lmEHNjVqI6Zd"
       },
       "source": [
         "# drop unnecessary columns, these columns won't be useful in analysis and prediction\n",
         "titanic_df = titanic_df.drop(['PassengerId','Name','Ticket'], axis=1)\n",
         "test_df    = test_df.drop(['Name','Ticket'], axis=1)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zUVPNmh2cjhs"
+      },
+      "source": [
+        "There are three places where people onboarded: S, C, Q"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tazavANBI_s7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "tazavANBI_s7"
       },
       "source": [
         "# only in titanic_df, fill the two missing values with the most occurred value, which is \"S\".\n",
@@ -203,15 +239,13 @@
         "titanic_df.drop(['Embarked'], axis=1,inplace=True)\n",
         "test_df.drop(['Embarked'], axis=1,inplace=True)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R1EnQzDJJD4r",
-        "colab_type": "code",
-        "colab": {}
+        "id": "R1EnQzDJJD4r"
       },
       "source": [
         "# Fare\n",
@@ -237,15 +271,13 @@
         "avgerage_fare.index.names = std_fare.index.names = [\"Survived\"]\n",
         "avgerage_fare.plot(yerr=std_fare,kind='bar',legend=False)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bJNR9maYJHsE",
-        "colab_type": "code",
-        "colab": {}
+        "id": "bJNR9maYJHsE"
       },
       "source": [
         "# Age \n",
@@ -284,15 +316,13 @@
         "titanic_df['Age'].hist(bins=70, ax=axis2)\n",
         "# test_df['Age'].hist(bins=70, ax=axis4)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kmbeBHnhJLMe",
-        "colab_type": "code",
-        "colab": {}
+        "id": "kmbeBHnhJLMe"
       },
       "source": [
         "# .... continue with plot Age column\n",
@@ -308,15 +338,13 @@
         "average_age = titanic_df[[\"Age\", \"Survived\"]].groupby(['Age'],as_index=False).mean()\n",
         "sns.barplot(x='Age', y='Survived', data=average_age)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IsCVmM1tJPaY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "IsCVmM1tJPaY"
       },
       "source": [
         "# Cabin\n",
@@ -324,15 +352,13 @@
         "titanic_df.drop(\"Cabin\",axis=1,inplace=True)\n",
         "test_df.drop(\"Cabin\",axis=1,inplace=True)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5reagf9OJSmz",
-        "colab_type": "code",
-        "colab": {}
+        "id": "5reagf9OJSmz"
       },
       "source": [
         "# Family\n",
@@ -364,15 +390,13 @@
         "\n",
         "axis1.set_xticklabels([\"With Family\",\"Alone\"], rotation=0)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EWlYoRpOJWTf",
-        "colab_type": "code",
-        "colab": {}
+        "id": "EWlYoRpOJWTf"
       },
       "source": [
         "# Sex\n",
@@ -414,15 +438,13 @@
         "titanic_df.drop(['Person'],axis=1,inplace=True)\n",
         "test_df.drop(['Person'],axis=1,inplace=True)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LOG_y7gUJZLZ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "LOG_y7gUJZLZ"
       },
       "source": [
         "# Pclass\n",
@@ -445,15 +467,13 @@
         "titanic_df = titanic_df.join(pclass_dummies_titanic)\n",
         "test_df    = test_df.join(pclass_dummies_test)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l9-5P45DJcCf",
-        "colab_type": "code",
-        "colab": {}
+        "id": "l9-5P45DJcCf"
       },
       "source": [
         "# define training and testing sets\n",
@@ -462,42 +482,45 @@
         "Y_train = titanic_df[\"Survived\"]\n",
         "X_test  = test_df.drop(\"PassengerId\",axis=1).copy()\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xNlBVDb6L6Uo",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xNlBVDb6L6Uo"
       },
       "source": [
         "print(X_train)\n",
         "print(Y_train)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qdjiwucjdIS2"
+      },
+      "source": [
+        "**Create, train, and predict with the model**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nJZcmWDvN-Xg",
-        "colab_type": "code",
-        "colab": {}
+        "id": "nJZcmWDvN-Xg"
       },
       "source": [
         "X_train2,X_test2,y_train2,y_test2=train_test_split(X_train,Y_train,test_size=0.20,random_state=0)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "e1y2i0g0Jevf",
-        "colab_type": "code",
-        "colab": {}
+        "id": "e1y2i0g0Jevf"
       },
       "source": [
         "# Logistic Regression\n",
@@ -510,28 +533,33 @@
         "\n",
         "logreg.score(X_train2, y_train2)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UWb8Pg3YdQb7"
+      },
+      "source": [
+        "**The predicted values**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3p-YEBlDPgZ1",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3p-YEBlDPgZ1"
       },
       "source": [
         "Y_pred"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yHrSobemPMgr",
-        "colab_type": "code",
-        "colab": {}
+        "id": "yHrSobemPMgr"
       },
       "source": [
         "df_check = pd.DataFrame()\n",
@@ -539,29 +567,43 @@
         "df_check[\"predictions\"] = Y_pred\n",
         "df_check.head(20)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-A--wKt5dUzg"
+      },
+      "source": [
+        "**Look at the confusion matrix**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4OqOm7uASBJT",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4OqOm7uASBJT"
       },
       "source": [
         "cnf_matrix = metrics.confusion_matrix(y_test2, Y_pred)\n",
         "cnf_matrix"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a833n4Jmddb3"
+      },
+      "source": [
+        "**Look at the correlation between the features and the likelyhood of surviving**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "POV7w_kiJnC0",
-        "colab_type": "code",
-        "colab": {}
+        "id": "POV7w_kiJnC0"
       },
       "source": [
         "# get Correlation Coefficient for each feature using Logistic Regression\n",
@@ -572,7 +614,7 @@
         "# preview\n",
         "coeff_df"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
