--- a/LinearRegression3.ipynb
+++ b/LinearRegression3.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "LinearRegression3.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPx0+/YbQweMT9Ti6qXuSri",
+      "provenance": [],
+      "authorship_tag": "ABX9TyNqdmuuQL4sq9VpXwEQTowt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +28,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Mn0PydULVpqq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Mn0PydULVpqq"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -38,14 +36,13 @@
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tRzlhKQbRe_t",
-        "colab_type": "text"
+        "id": "tRzlhKQbRe_t"
       },
       "source": [
         "**Imoprt Libraries**"
@@ -54,9 +51,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L9JDk2RnS5SW",
-        "colab_type": "code",
-        "colab": {}
+        "id": "L9JDk2RnS5SW"
       },
       "source": [
         "import pandas as pd  \n",
@@ -68,14 +63,13 @@
         "from sklearn import metrics\n",
         "%matplotlib inline"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xrHH1XECRi0i",
-        "colab_type": "text"
+        "id": "xrHH1XECRi0i"
       },
       "source": [
         "**Import the data to a Pandas dataframe**"
@@ -84,21 +78,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xN6fdMu0Ukb2",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xN6fdMu0Ukb2"
       },
       "source": [
         "dataset = pd.read_csv('weather.csv')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WgnJ78qSRoZs",
-        "colab_type": "text"
+        "id": "WgnJ78qSRoZs"
       },
       "source": [
         "**Check the shape of the dataset**"
@@ -107,32 +98,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yL3u3Cn5V4V-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "yL3u3Cn5V4V-"
       },
       "source": [
         "dataset.shape"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zZfnxFKKRvXc",
-        "colab_type": "text"
+        "id": "6A42ijQECgxY"
       },
       "source": [
-        "**ScatterPlot the data**"
+        "**List the feature names**"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7wCPWi4IWBuL",
-        "colab_type": "code",
-        "colab": {}
+        "id": "HGfq6OSlCa3n"
+      },
+      "source": [
+        "print(dataset.columns)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zZfnxFKKRvXc"
+      },
+      "source": [
+        "**ScatterPlot the data**<br>\n",
+        "There are 22 different features for the weather. \n",
+        "Chose two to plot, in this case MinTemp and MaxTemp."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7wCPWi4IWBuL"
       },
       "source": [
         "dataset.plot(x='MinTemp', y='MaxTemp', style='o')  \n",
@@ -141,38 +149,35 @@
         "plt.ylabel('MaxTemp')  \n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2HAZSX1cR2K0",
-        "colab_type": "text"
+        "id": "2HAZSX1cR2K0"
       },
       "source": [
-        "**Reshape the data**"
+        "**Reshape the data**<br>\n",
+        "The -1 means, figure out the correct shape of the new array. It will be compatible with the original shape"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RQ3atxUZWMRA",
-        "colab_type": "code",
-        "colab": {}
+        "id": "RQ3atxUZWMRA"
       },
       "source": [
         "X = dataset['MinTemp'].values.reshape(-1,1)\n",
         "y = dataset['MaxTemp'].values.reshape(-1,1)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SsMnkiOwR4F7",
-        "colab_type": "text"
+        "id": "SsMnkiOwR4F7"
       },
       "source": [
         "**Split the data into train and test set**"
@@ -181,21 +186,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FY3NrjErWPi6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "FY3NrjErWPi6"
       },
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JluJ6WnWSDUv",
-        "colab_type": "text"
+        "id": "JluJ6WnWSDUv"
       },
       "source": [
         "**Select and train the model**"
@@ -204,22 +206,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ye4mGQrMWSJl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ye4mGQrMWSJl"
       },
       "source": [
         "regressor = LinearRegression()  \n",
         "regressor.fit(X_train, y_train) #training the algorithm"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "R65GCOxySGaW",
-        "colab_type": "text"
+        "id": "R65GCOxySGaW"
       },
       "source": [
         "**Print the y intercept and slope**"
@@ -228,24 +227,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tex-Rsv1WVCs",
-        "colab_type": "code",
-        "colab": {}
+        "id": "tex-Rsv1WVCs"
       },
       "source": [
         "#To retrieve the intercept:\n",
         "print(regressor.intercept_)\n",
         "#For retrieving the slope:\n",
-        "print(regressor.coef_)"
+        "print(regressor.coef_)\n",
+        "print(regressor.score(X_train,y_train))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Jz9nKQ3oSJ1i",
-        "colab_type": "text"
+        "id": "Jz9nKQ3oSJ1i"
       },
       "source": [
         "**Make predictions using the test set**"
@@ -254,21 +251,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uQyTC8xIWZxQ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "uQyTC8xIWZxQ"
       },
       "source": [
         "y_pred = regressor.predict(X_test)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EM1eeC6USOAb",
-        "colab_type": "text"
+        "id": "EM1eeC6USOAb"
       },
       "source": [
         "**Compare the actual y value with the predicted value**"
@@ -277,22 +271,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZPGNRtsyWcnb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ZPGNRtsyWcnb"
       },
       "source": [
         "df = pd.DataFrame({'Actual': y_test.flatten(), 'Predicted': y_pred.flatten()})\n",
         "df"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JnAs4Q0sST31",
-        "colab_type": "text"
+        "id": "JnAs4Q0sST31"
       },
       "source": [
         "**Plot the line for prediction**"
@@ -301,23 +292,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8ZGTV1HWWifA",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8ZGTV1HWWifA"
       },
       "source": [
         "plt.scatter(X_test, y_test,  color='gray')\n",
         "plt.plot(X_test, y_pred, color='red', linewidth=2)\n",
-        "plt.show()\n"
+        "plt.title('MinTemp vs MaxTemp')  \n",
+        "plt.xlabel('MinTemp')  \n",
+        "plt.ylabel('MaxTemp')  \n",
+        "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3J0inxhWSZUt",
-        "colab_type": "text"
+        "id": "3J0inxhWSZUt"
       },
       "source": [
         "**Print the metrics for the prediction model**"
@@ -326,27 +317,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M6Nqnh70Wp7w",
-        "colab_type": "code",
-        "colab": {}
+        "id": "M6Nqnh70Wp7w"
       },
       "source": [
         "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))  \n",
         "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))  \n",
         "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yK243h-HPE9G",
-        "colab_type": "text"
+        "id": "yK243h-HPE9G"
       },
       "source": [
         "# **Assignment**<br>\n",
-        "Choose two other columns of the dataset and perform linear regression on them.<br>\n",
+        "Choose two other columns that contain numerical data and perform linear regression on them.<br>\n",
         "\n",
         "Share your insights with the class."
       ]
@@ -354,81 +342,80 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Om_dEL1nPHRj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Om_dEL1nPHRj"
       },
       "source": [
         "dataset.columns\n",
         "#Chose any two columns for example Temp9am and Temp3pm"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9A2A1QJgPHXJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "bqWOmxzXGLaA"
       },
       "source": [
-        "dataset.plot(x='First column', y='Predict column', style='o')  \n",
-        "plt.title('first vs second column')  \n",
-        "plt.xlabel('first column)  \n",
-        "plt.ylabel('predicted column')  \n",
-        "plt.show()"
+        "dataset.loc[1]"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Cgfwu6HgQq9S",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9A2A1QJgPHXJ"
+      },
+      "source": [
+        "dataset.plot(x='first col', y='second col', style='o')  \n",
+        "plt.title('first vs second')  \n",
+        "plt.xlabel('first')  \n",
+        "plt.ylabel('second')  \n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cgfwu6HgQq9S"
       },
       "source": [
         "X = dataset['first column'].values.reshape(-1,1)\n",
         "y = dataset['second column'].values.reshape(-1,1)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y6DX-EW5Q9wJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Y6DX-EW5Q9wJ"
       },
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DGMw4g37RB2L",
-        "colab_type": "code",
-        "colab": {}
+        "id": "DGMw4g37RB2L"
       },
       "source": [
         "regressor = LinearRegression()  \n",
         "regressor.fit(X_train, y_train) #training the algorithm"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zH0mU23-RE4u",
-        "colab_type": "code",
-        "colab": {}
+        "id": "zH0mU23-RE4u"
       },
       "source": [
         "#To retrieve the intercept:\n",
@@ -436,64 +423,56 @@
         "#For retrieving the slope:\n",
         "print(regressor.coef_)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ub-7xEp4RHzN",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ub-7xEp4RHzN"
       },
       "source": [
         "y_pred = regressor.predict(X_test)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z-jdsEELRL0I",
-        "colab_type": "code",
-        "colab": {}
+        "id": "z-jdsEELRL0I"
       },
       "source": [
         "df = pd.DataFrame({'Actual': y_test.flatten(), 'Predicted': y_pred.flatten()})\n",
         "df"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DL5d9gG9RX0C",
-        "colab_type": "code",
-        "colab": {}
+        "id": "DL5d9gG9RX0C"
       },
       "source": [
         "plt.scatter(X_test, y_test,  color='gray')\n",
         "plt.plot(X_test, y_pred, color='red', linewidth=2)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8jDjvVY6RaSF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8jDjvVY6RaSF"
       },
       "source": [
         "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))  \n",
         "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))  \n",
         "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
